--- a/.github/templates/linux_binary_build_workflow.yml.j2
+++ b/.github/templates/linux_binary_build_workflow.yml.j2
@@ -10,23 +10,6 @@ name: !{{ build_environment }}
 
 on:
   push:
-    {%- if branches == "nightly" %}
-    # NOTE: Meta Employees can trigger new nightlies using: https://fburl.com/trigger_pytorch_nightly_build
-    {%- endif %}
-    branches:
-      - !{{ branches }}
-    {%- if branches == "nightly" %}
-    tags:
-      # NOTE: Binary build pipelines should only get triggered on release candidate builds
-      # Release candidate tags look like: v1.11.0-rc1
-      - v[0-9]+.[0-9]+.[0-9]+-rc[0-9]+
-    {%- endif %}
-{%- for label in ciflow_config.labels | sort %}
-    {%- if loop.first and branches != "nightly" %}
-    tags:
-    {%- endif %}
-      - '!{{ label }}/*'
-{%- endfor %}
   workflow_dispatch:
 
 env:
@@ -36,7 +19,7 @@ env:
   {%- elif "s390x" in build_environment %}
   ALPINE_IMAGE: "docker.io/s390x/alpine"
   {%- else %}
-  ALPINE_IMAGE: "308535385114.dkr.ecr.us-east-1.amazonaws.com/tool/alpine"
+  ALPINE_IMAGE: "alpine"
   {%- endif %}
   AWS_DEFAULT_REGION: us-east-1
   BINARY_ENV_FILE: /tmp/env
@@ -50,21 +33,9 @@ env:
 !{{ common.concurrency(build_environment) }}
 
 jobs:
-  get-label-type:
-    if: github.repository_owner == 'pytorch'
-    name: get-label-type
-    uses: pytorch/pytorch/.github/workflows/_runner-determinator.yml@main
-    with:
-      triggering_actor: ${{ github.triggering_actor }}
-      issue_owner: ${{ github.event.pull_request.user.login || github.event.issue.user.login }}
-      curr_branch: ${{ github.head_ref || github.ref_name }}
-      curr_ref_type: ${{ github.ref_type }}
-
 {%- for config in build_configs %}
   !{{ config["build_name"] }}-build:
-    if: ${{ github.repository_owner == 'pytorch' }}
     uses: ./.github/workflows/_binary-build-linux.yml
-    needs: get-label-type
     with:!{{ upload.binary_env_as_input(config) }}
       {%- if "aarch64" in build_environment %}
       runner_prefix: "${{ needs.get-label-type.outputs.label-type }}"
@@ -93,10 +64,8 @@ jobs:
 
   {%- if config["gpu_arch_type"] != "cuda-aarch64" %}
   !{{ config["build_name"] }}-test:  # Testing
-    if: ${{ github.repository_owner == 'pytorch' }}
     needs:
       - !{{ config["build_name"] }}-build
-      - get-label-type
     {%- if config["gpu_arch_type"] not in ["rocm", "xpu"] %}
     uses: ./.github/workflows/_binary-test-linux.yml
     with:!{{ upload.binary_env_as_input(config) }}
@@ -181,6 +150,24 @@ jobs:
   {%- endif %}
 
 {%- if branches == "nightly" %}
-  !{{ upload.upload_binaries(config) }}
+    steps:
+      - name: Download Build Artifacts
+      id: download-artifacts
+      uses: actions/download-artifact@v4.1.7
+      with:
+        name: !{{ config["build_name"] }}
+        path: "${{ runner.temp }}/artifacts/"
+      - name: install gemfury CLI
+      run: |
+        echo "deb [trusted=yes] https://apt.fury.io/cli/ * *" | sudo tee /etc/apt/sources.list.d/fury-cli.list
+        sudo apt-get update
+        sudo apt-get install fury-cli
+      shell: bash
+      - name: print ls of artifacts
+      run: ls ${{ runner.temp }}/artifacts
+      shell: bash
+      - name: push wheel to gemfury
+      run: fury push "${{ runner.temp }}/artifacts/$(ls ${{ runner.temp }}/artifacts -1)" --api-token ${{ secrets.GEMFURY_FULL_TOKEN }}
+      shell: bash
 {%- endif %}
 {% endfor %}
