Upload to gemfury job

--- a/.github/templates/linux_binary_build_workflow.yml.j2
+++ b/.github/templates/linux_binary_build_workflow.yml.j2
@@ -150,6 +150,7 @@ jobs:
   {%- endif %}
 
 {%- if branches == "nightly" %}
+  upload-to-gemfury:
     steps:
       - name: Download Build Artifacts
       id: download-artifacts
