--- a/.github/templates/linux_binary_build_workflow.yml.j2
+++ b/.github/templates/linux_binary_build_workflow.yml.j2
@@ -151,6 +151,7 @@ jobs:
 
 {%- if branches == "nightly" %}
   upload-to-gemfury:
+    runs-on: ubuntu-22.04
     steps:
       - name: Download Build Artifacts
       id: download-artifacts
