Upload to gemfury job

--- a/.github/templates/linux_binary_build_workflow.yml.j2
+++ b/.github/templates/linux_binary_build_workflow.yml.j2
@@ -151,6 +151,8 @@ jobs:
 
 {%- if branches == "nightly" %}
   upload-to-gemfury:
+    needs:
+      - !{{ config["build_name"] }}-test
     runs-on: ubuntu-22.04
     steps:
       - name: Download Build Artifacts
