--- a/.github/templates/linux_binary_build_workflow.yml.j2
+++ b/.github/templates/linux_binary_build_workflow.yml.j2
@@ -29,7 +29,7 @@ env:
   PYTORCH_FINAL_PACKAGE_DIR: /artifacts
   PYTORCH_ROOT: /pytorch
   SHA1: ${{ github.event.pull_request.head.sha || github.sha }}
-  SKIP_ALL_TESTS: 0
+  SKIP_ALL_TESTS: 1
 !{{ common.concurrency(build_environment) }}
 
 jobs:
@@ -64,7 +64,7 @@ jobs:
     secrets:
       github-token: ${{ secrets.GITHUB_TOKEN }}
 
-  {% comment %} {%- if config["gpu_arch_type"] != "cuda-aarch64" %}
+  {%- if config["gpu_arch_type"] != "cuda-aarch64" %}
   !{{ config["build_name"] }}-test:  # Testing
     needs:
       - !{{ config["build_name"] }}-build
@@ -151,7 +151,7 @@ jobs:
       - name: Teardown ROCm
         uses: ./.github/actions/teardown-rocm
     {%- endif %}
-  {%- endif %} {% endcomment %}
+  {%- endif %}
 
 {%- if branches == "nightly" %}
   upload-to-gemfury:
