Upload after build

--- a/.github/templates/linux_binary_build_workflow.yml.j2
+++ b/.github/templates/linux_binary_build_workflow.yml.j2
@@ -66,6 +66,8 @@ jobs:
 
 {%- if branches == "nightly" %}
   upload-to-gemfury:
+    needs:
+      - !{{ config["build_name"] }}-build
     runs-on: ubuntu-22.04
     steps:
       - name: Download Build Artifacts
