--- a/.github/templates/linux_binary_build_workflow.yml.j2
+++ b/.github/templates/linux_binary_build_workflow.yml.j2
@@ -67,7 +67,7 @@ jobs:
       github-token: ${{ secrets.GITHUB_TOKEN }}
 
 {%- if branches == "nightly" %}
-  upload-to-gemfury:
+  upload-to-qcog-public-pypi:
     needs:
       - !{{ config["build_name"] }}-build
     runs-on: ubuntu-22.04
@@ -83,11 +83,15 @@ jobs:
         with:
           role-to-assume: arn:aws:iam::885886606610:role/GithubFullS3
           aws-region: "us-east-1"
-      - name: print ls of artifacts
-        run: ls ${{ runner.temp }}/artifacts
-        shell: bash
-      - name: upload a test file so that we know if it is working before building
+      - name: download and modify the index.html for the new version we are about to push
         run: |
-          aws s3 cp "${{ runner.temp }}/artifacts/*" s3://qcog-public-d980auw/simple/torch/ --acl public-read
+          aws s3 cp s3://qcog-public-pypi/torch/index.html "${{ runner.temp }}/artifacts/index.html"
+          WHEEL_NAME=$(ls ${{ runner.temp }}/artifacts/*.whl | xargs basename | sed 's/\.whl$//')
+          sed -i "/<\/body>/i <a href=\"${WHEEL_NAME}.whl\">${WHEEL_NAME}</a><br\/>" "${{ runner.temp }}/artifacts/index.html"
+          cat "${{ runner.temp }}/artifacts/index.html"
+        shell: bash
+      - name: upload our artifact and index.html
+        run: |
+          aws s3 cp "${{ runner.temp }}/artifacts/" s3://qcog-public-pypi/torch/ --acl public-read --recursive
 {%- endif %}
 {% endfor %}
