fix aws cli call

--- a/.github/templates/linux_binary_build_workflow.yml.j2
+++ b/.github/templates/linux_binary_build_workflow.yml.j2
@@ -92,6 +92,6 @@ jobs:
         shell: bash
       - name: upload our artifact and index.html
         run: |
-          aws s3 cp "${{ runner.temp }}/artifacts/" s3://qcog-public-pypi/torch/ --acl public-read --recursive
+          aws s3 cp "${{ runner.temp }}/artifacts/" s3://qcog-public-pypi/torch/ --recursive
 {%- endif %}
 {% endfor %}
