--- a/.github/templates/linux_binary_build_workflow.yml.j2
+++ b/.github/templates/linux_binary_build_workflow.yml.j2
@@ -72,6 +72,8 @@ jobs:
       - !{{ config["build_name"] }}-build
     runs-on: ubuntu-22.04
     steps:
+      - id: install-aws-cli, make sure it is the latest version fo rour redeploy
+        uses: unfor19/install-aws-cli-action@v1
       - name: Download Build Artifacts
         id: download-artifacts
         uses: actions/download-artifact@v4.1.7
@@ -93,5 +95,8 @@ jobs:
       - name: upload our artifact and index.html
         run: |
           aws s3 cp "${{ runner.temp }}/artifacts/" s3://qcog-public-pypi/torch/ --recursive
+      - name: redeploy our pypi application on amplify
+        run: |
+          aws amplify start-deployment --app-id d35q29c96xqpsn --branch-name prod --source-url 's3://qcog-public-pypi/' --source-url-type BUCKET_PREFIX --profile qcog-dev
 {%- endif %}
 {% endfor %}
